@@ -88,6 +88,7 @@ Version 4.6  [ (under development) ]
           and manifolds.
         - New tests that enumerate automorphisms of triangulations and
           test for subcomplexes.
+        - New tests for 3-sphere and 3-ball recognition.
     BUILD ENVIRONMENT:
         - Installing into a staging area (i.e., building packages) now works
           fine even if older versions of the Regina development libraries are
